--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,9 @@
 .main{
   @apply bg-gray-300
 }
+
+body {
+  height: 100vh;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
